--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -1,7 +1,7 @@
 body { 
     margin:0;
     padding:0;
-    font-family:helvetica, sans-serif; 
+    font-family:'Poppins', sans-serif;
 }
 
 a { 
@@ -64,6 +64,7 @@ input, textarea {
     padding:6px 10px;
     font-size:12px;
 }
+
 input[type=submit] {
     font-weight:bold;
     background:#00abff;
