--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -17,6 +17,10 @@
     </head>
 
     <body>
+
+        <!-- navbar start -->
+        <!-- navbar end -->
+
         <div id="content">
             {% block content %}
             {% endblock %}
@@ -24,6 +28,7 @@
 
         <div id="sidebar">
             <h2>My blog</h2>
+            <button><a href="{% url 'blog:post_search' %}">Search Blog</a></button>
             <p>This is my blog. I've written {% total_posts %} posts so far.</p>
             <p>
                 <a href="{% url 'blog:post_feed' %}">Subscribe to my RSS feed</a>
@@ -41,7 +46,6 @@
                 {% endfor %}
             </ul>
         </div>
-
 
 
         <script src="{% static 'js/main.js' %}"></script>
