--- a/blog/templates/blog/post/create.html
+++ b/blog/templates/blog/post/create.html
@@ -3,6 +3,7 @@
 {% block content %}
     <h2>Create New Post</h2>
     <form method="POST">
+        {{ form.media }}
         {{ form.as_p }}
         {% csrf_token %}
         <p><input type="submit" value="Add Post"></p>
