--- a/blog/templates/blog/post/list.html
+++ b/blog/templates/blog/post/list.html
@@ -13,11 +13,10 @@
     {% for post in posts %}
         <h2>
             Category:
-            {% for category in post.categories.all %}
-               <a href="{% url 'blog:blog_category' category.name %}">
-                   {{ category.name }}
-               </a>
-            {% endfor %}
+            <a href="{% url 'blog:post_category' post.categories %}">
+                   {{ post.categories }}
+            </a>
+
         </h2>
         <h2>
             <a href="{{ post.get_absolute_url }}">{{ post.title }}</a>
