--- a/users/templates/users/user_login.html
+++ b/users/templates/users/user_login.html
@@ -1,5 +1,6 @@
-{% extends 'users/base.html' %}
-{% load crispy_forms_tags %}
+{% extends 'blog/base.html' %}
+{% load socialaccount %}
+{% providers_media_js %}
 
 {% block title %}Login Form{% endblock title %}
 
@@ -45,5 +46,10 @@
                 {% endif %}
             </div>
         </form>
+    </div>
+
+    <div>
+        <button><a href="{% provider_login_url 'facebook' method='js_sdk' %}">Login With Facebook</a></button>
+        <button><a href="{% provider_login_url 'google' %}">Login WIth Google</a></button>
     </div>
 {% endblock %}
