--- a/users/templates/users/signup_form.html
+++ b/users/templates/users/signup_form.html
@@ -13,15 +13,18 @@
                 <div class='error'>{{form.errors.password}}</div>
                 <div class='error'>{{form.errors.photo}}</div>
             </div>
-            <div>
-                {% for field in form %}
-                    <label>{{ field.label }}:</label>
-                        {{ field }}
+            {% for field in form %}
+                    <div class="form-label" style="font-style: italic; text-transform: capitalize; padding-top: 10px; padding-bottom: 5px; font-weight: bold;">
+                        {{ field.label }}:
+                    </div>
+
                     <div style="color: red;">
                         {{ field.errors }}
                     </div>
+                    <div class="form-control">
+                        {{ field }}
+                    </div>
                 {% endfor %}
-            </div>
             <button class="btn btn-success" type="submit">
                 Sign Up
             </button>
