--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -19,13 +19,14 @@ h1 {
 
 h2 {
     font-weight:normal;
-    margin:30px 0 0;
+    margin:10px 0 0;
 }
 
 #content { 
     float:left;
     width:60%;
     padding:0 0 0 30px;
+    overflow: auto;
 }
 
 #sidebar { 
@@ -35,6 +36,7 @@ h2 {
     background:#efefef; 
     height:100%;
 }
+
 
 p.date { 
     color:#ccc;
@@ -75,6 +77,9 @@ input[type=submit] {
     font-size:14px;
     text-transform:uppercase; 
 }
+input[type=password] {
+    background: none;
+}
 .errorlist { 
     color:#cc0033;
     float:left;
@@ -106,6 +111,89 @@ button {
 li {
     display: list-item;
 }
+
+/*
+Headers
+*/
+
+#header {
+    padding:10px 100px;
+    height: 100px;
+    font-size:14px;
+    background:#12c064;
+    color:#fff;
+    border-bottom:4px solid #1cdf78;
+    overflow:auto;
+}
+@media screen and (max-width: 515px) {
+    .header ul li a {
+        display: flex;
+        flex-direction: column;
+        left: 0;
+        flex-wrap: nowrap;
+    }
+    .logo {
+        display: flex;
+        flex-direction: column;
+    }
+    .header_text {
+        font-size: 15px;
+        text-align: left;
+        float: left;
+    }
+}
+
+.my_blog {
+    float: left;
+}
+
+#header .logo {
+    display: flex;
+    flex-direction: column;
+    font-family: 'Poppins', sans-serif;
+    float:left;
+    color:#f3f7cc;
+    font-size:30px;
+    margin-right:10%;
+    text-align: center;
+}
+#header .logo small {
+    font-size: 15px;
+    font-style: italic;
+}
+
+#header ul.menu {
+    list-style:none;
+    float:left;
+    margin:0;
+    padding:0;
+}
+#header ul.menu li {
+    float:left;
+    padding:4px 10px;
+}
+
+#header ul.menu li.selected a, #header ul.menu li.selected a:hover {
+    color:#1b6d32;
+    font-weight:bold;
+}
+
+#header a {
+    color:#f3f7cc;
+}
+#header a:hover {
+    color:#fff;
+}
+
+#header .user {
+    float:right;
+    padding-top:4px;
+}
+
+/*
+Post List
+*/
+
 
 /*
 Navbar Styling
