--- a/blog/templates/blog/post/detail.html
+++ b/blog/templates/blog/post/detail.html
@@ -58,7 +58,7 @@
 
     <div class="share-btn-container">
         <a href="#" class="facebook-btn">
-            <i class="fab fa-facebook"></i>
+            <i class="fab fa-facebook-f"></i>
         </a>
 
         <a href="#" class="twitter-btn">
