--- a/blog/templates/blog/post/list.html
+++ b/blog/templates/blog/post/list.html
@@ -3,8 +3,11 @@
 
 {% block title %}My Blog{% endblock %}
 
+{% block style %}
+
+{% endblock style %}
+
 {% block content %}
-    <h1>My Blog</h1>
 
     {% if tag %}
         <h2>Posts tagged with "{{ tag.name }}"</h2>
@@ -12,15 +15,14 @@
 
     {% for post in posts %}
         <h2>
+            <a href="{{ post.get_absolute_url }}">{{ post.title }}</a>
+        </h2>
+        <p>
             Category:
             <a href="{% url 'blog:post_category' post.categories %}">
                    {{ post.categories }}
             </a>
-
-        </h2>
-        <h2>
-            <a href="{{ post.get_absolute_url }}">{{ post.title }}</a>
-        </h2>
+        </p>
 
         <p class="tags">
             Tags:
