--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -11,10 +11,14 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
         <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+        <link href="https://fonts.googleapis.com/css2?family=Satisfy&display=swap" rel="stylesheet">
         <!-- reference your installed Font Awesome Free package's files here -->
+        <link href="{% static 'css/owl.carousel.min.css' %}" rel="stylesheet">
         <link href="{% static 'fontawesome_free/css/all.min.css' %}" rel="stylesheet" type="text/css">
         <link href="{% static 'css/blog.css' %}" rel="stylesheet">
         <script src="{% static 'fontawesome_free/js/all.min.js' %}"></script>
+
 
         {% block style %}
         
@@ -23,13 +27,13 @@
     </head>
 
     <body>
-
+        <!--
         <div id="header">
             <div class="row">
                 <div class="col-sm-8">
                     <div class="logo">
                         <span class="header_text"  id='welcome'>Welcome To Mayowa's Blog</span>
-                        <small class="header_text">News, Events, Entertainment, Lifestyle, Fashion, Beauty, Inspiration, Gossip...</small>
+                        <small class="header_text_small">News, Events, Entertainment, Lifestyle, Fashion, Beauty, Inspiration, Gossip...</small>
                     </div>
                 </div>
 
@@ -53,30 +57,96 @@
             </div>
 
         </div>
+        -->
 
-        <div id="content">
-            {% block content %}
-            {% endblock %}
-        </div>
-
-        <div id="sidebar">
-            <button><a href="{% url 'blog:post_search' %}">Search Blog</a></button>
-            <p>This is my blog. I've written {% total_posts %} posts so far.</p>
-            <p>
-                <a href="{% url 'blog:post_feed' %}">Subscribe to my RSS feed</a>
-            </p>
-            <h3>Latest posts</h3>
-            {% show_latest_posts 3 %}
-
-            <h3>Most commented posts</h3>
-            {% get_most_commented_posts as most_commented_posts %}
-            <ul>
-                {% for post in most_commented_posts %}
-                    <li>
-                        <a href="{{ post.get_absolute_url }}">{{ post.title }}</a>
+        <!-- navbar start -->
+    <nav class="navbar navbar-expand-lg">
+        <div class="container">
+            <a class="navbar-brand" href="#">
+                <h3 style="font-family: 'Satisfy', cursive;">Connect</h3>
+                <img src="{% static 'img/blog.jpg' %}" width=200px>
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="fas fa-align-justify" style="color: white;"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNavDropdown" style="float: right;">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link active" href="#">Home</a>
                     </li>
-                {% endfor %}
-            </ul>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            Categories
+                        </a>
+                        <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                            {% for category in categories %}
+                                <li><a class="dropdown-item" href="#">{{ category }}</a></li>
+                            {% endfor %}
+                        </ul>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'blog:post_search' %}">Search Blog</a>
+                    </li>
+                    {% if request.user.is_authenticated %}
+                        <div style="color: #14fa23;">
+                            <h4>Hello, {{ request.user.first_name }}</h4>
+                        </div>
+                        <li class="nav-item">
+                            <a class="nav-link" href="{% url 'blog:post_create' %}">Create Post</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="{% url 'users:logout' %}">Logout</a>
+                        </li>
+                    {% else %}
+                        <li class="nav-item">
+                            <a class="nav-link" href="{% url 'users:login' %}">Log-In</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="{% url 'users:user_signup' %}">Sign Up</a>
+                        </li>
+                    {% endif %}
+
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">About Us</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Contact</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+    <!-- navbar end -->
+        <div class="container">
+            <div class="row">
+            <div class="col-8">
+                <div id="content">
+                    {% block content %}
+                    {% endblock %}
+                </div>
+            </div>
+
+            <div class="col-4">
+                <div id="sidebar">
+                    <p>This is my blog. I've written {% total_posts %} posts so far.</p>
+                    <p>
+                        <a href="{% url 'blog:post_feed' %}">Subscribe to my RSS feed</a>
+                    </p>
+                    <h3>Latest posts</h3>
+                    {% show_latest_posts 3 %}
+
+                    <h3>Most commented posts</h3>
+                    {% get_most_commented_posts as most_commented_posts %}
+                    <ul>
+                        {% for post in most_commented_posts %}
+                            <li>
+                                <a href="{{ post.get_absolute_url }}">{{ post.title }}</a>
+                            </li>
+                        {% endfor %}
+                    </ul>
+                </div>
+            </div>
+        </div>
         </div>
 
 
