--- a/blog/templates/blog/post/create.html
+++ b/blog/templates/blog/post/create.html
@@ -2,7 +2,7 @@
 {% block title %}Add New Post{% endblock %}
 {% block content %}
     <h2>Create New Post</h2>
-    <form method="POST">
+    <form method="POST" enctype="multipart/form-data">
         {{ form.media }}
         {{ form.as_p }}
         {% csrf_token %}
