--- a/blog/templates/blog/post/list.html
+++ b/blog/templates/blog/post/list.html
@@ -14,30 +14,47 @@
     {% endif %}
 
     {% for post in posts %}
-        <h2>
-            <a href="{{ post.get_absolute_url }}">{{ post.title }}</a>
-        </h2>
-        <p>
-            Category:
-            <a href="{% url 'blog:post_category' post.categories %}">
-                   {{ post.categories }}
-            </a>
-        </p>
+        <div class="post-outer">
+            <article class="post">
+                <h2 class="post_title">
+                    <a class="title" href="{{ post.get_absolute_url }}">{{ post.title }}</a>
+                    <small class="post_name">by {{ post.author.first_name }} {{ post.author.last_name }}</small>
+                </h2>
+                <hr>
+                <div class="post_info">
+                    <p class="date">{{ post.publish }}</p>
+                    <p>
+                        Category:
+                        <a href="{% url 'blog:post_category' post.categories %}">
+                            {{ post.categories }}
+                        </a>
+                    </p>
 
-        <p class="tags">
-            Tags:
-                {% for tag in post.tags.all %}
-                    <a href="{% url 'blog:post_list_by_tag' tag.slug %}">
-                        {{ tag.name }}
-                    </a>
-                    {% if not forloop.last %}, {% endif %}
-                {% endfor %}
-        </p>
-
-        <p class="date">Published {{ post.publish }} by {{ post.author.first_name }} {{ post.author.last_name }}</p>
-        {{ post.body|markdown|truncatewords_html:30 }}
-        <hr>
-
+                    <p class="tags">
+                        Tags:
+                        {% for tag in post.tags.all %}
+                            <button class="tag_button"><a href="{% url 'blog:post_list_by_tag' tag.slug %}">
+                                {{ tag.name }}
+                            </a></button>
+                        {% if not forloop.last %}, {% endif %}
+                        {% endfor %}
+                    </p>
+                </div>
+                <hr>
+                <div class="post_body">
+                    <div>
+                        <div class="post_image">
+                            <img src="{{ post.post_image.url }}" style="width: 100px; height=100px; border-radius: 20px;" alt="No Post Image">
+                        </div>
+                        <div class="post_body">
+                            {{ post.body|markdown|truncatewords_html:30 }}
+                        </div>
+                        <button class="read_more"><a href="{{ post.get_absolute_url }}">Read More <i class="fa fa-arrow-right"></i></a></button>
+                    </div>
+                </div>
+                <hr>
+            </article>
+        </div>
     {% endfor %}
     {% include "pagination.html" with page=posts %}
 {% endblock content%}
